--- a/public/src/dialog/dialogs/tutorial-add-media-url-samples.html
+++ b/public/src/dialog/dialogs/tutorial-add-media-url-samples.html
@@ -8,13 +8,15 @@ obtain one at https://raw.github.com/mozilla/butter/master/LICENSE -->
 	<div class="butter-dialog-body tutorial-panel">
 	  <h2><strong>Exemples d'URL vers des ressources</strong></h2>
 	  <p>Par exemple, vous pouvez copier puis coller les ressources suivantes :</p>
-	  <p>http://localhost:8888/intro-site-du-zero.mp4
+	  <textarea style="margin: 0px;
+width: 471px;
+height: 142px;">http://localhost:8888/intro-site-du-zero.mp4
 http://localhost:8888/html5-intro.mp4
 http://www.youtube.com/watch?v=IA0pu90mTlA
 http://www.youtube.com/watch?v=qyu1QjFAr2c
 http://localhost:8888/html5-partie1-chapitre1-langages-interlude.mp4
 http://www.youtube.com/watch?v=5G8RyOjYX2I
-http://www.youtube.com/watch?v=RJvLlUrDupo</p>
+http://www.youtube.com/watch?v=RJvLlUrDupo</textarea>
 	  <a class="butter-btn btn-light" target="_blank">Suite →</a>
 	</div>
   </div>
