Further work on tutorial feature.

--- a/public/src/dialog/dialogs/tutorial-add-media-url-samples.html
+++ b/public/src/dialog/dialogs/tutorial-add-media-url-samples.html
@@ -6,8 +6,8 @@ obtain one at https://raw.github.com/mozilla/butter/master/LICENSE -->
 <div class="butter-tutorial-dialog butter-feedback-form butter-dialog">
   <div class="butter-dialog-offset">
 	<div class="butter-dialog-body tutorial-panel">
-	  <h2><strong>Exemples d'URL vers des ressources</strong></h2>
-	  <p>Par exemple, vous pouvez copier puis coller les ressources suivantes :</p>
+	  <h2><strong>Exemples de liste d'URL vers des ressources vidéo</strong></h2>
+	  <p>Les ressources suivantes correspondent à la version vidéo du cours sur HTML5 du Site du Zéro. Copiez cette liste et collez là dans le champ précédent, puis cliquez sur le bouton "Importer" qui va apparaître.</p>
 	  <textarea style="margin: 0px;
 width: 471px;
 height: 142px;">http://localhost:8888/intro-site-du-zero.mp4
@@ -17,7 +17,6 @@ http://www.youtube.com/watch?v=qyu1QjFAr2c
 http://localhost:8888/html5-partie1-chapitre1-langages-interlude.mp4
 http://www.youtube.com/watch?v=5G8RyOjYX2I
 http://www.youtube.com/watch?v=RJvLlUrDupo</textarea>
-	  <a class="butter-btn btn-light" target="_blank">Suite →</a>
 	</div>
   </div>
 </div>
