Added the rest of a basic editing tutorial.

--- a/public/src/dialog/dialogs/tutorial-add-media-import.html
+++ b/public/src/dialog/dialogs/tutorial-add-media-import.html
@@ -7,11 +7,10 @@ obtain one at https://raw.github.com/mozilla/butter/master/LICENSE -->
   <div class="butter-dialog-offset">
 	<div class="butter-dialog-body tutorial-panel">
 	  <h2><strong>Importation des ressources</strong></h2>
-	  <p>Les ressources sont en cours d'importation. Si une URL n'est pas conforme, un message d'erreur s'affichera.</p>
-	  <p>Importation ne signifie pas que les ressources sont ajoutées dans la ligne de temps, mais simplement affichées dans la galerie de médias du
-	  	panneau d'édition. Il y a deux manières d'utiliser en pratique ces ressources dans la ligne de temps.</p>
+	  <p>Les ressources sont en cours d'importation. Cela ne signifie pas que les ressources sont ajoutées dans la ligne de temps, mais simplement affichées dans la galerie de médias du panneau d'édition. Si une URL n'est pas conforme, un message d'erreur s'affichera.</p>
+	  <p>Il y a deux manières d'utiliser en pratique ces ressources dans la ligne de temps.</p>
 	  <p>Le bouton "Ajouter tout" permet d'ajouter les ressources importées de manière séquentielle dans la ligne de temps. Il est aussi possible d'ajouter individuellement chaque ressource en cliquant sur sa vignette.</p>
-	  <p>Nous allons ajouter toutes les ressources séquentiellement. Cliquez sur le bouton "Ajouter tout".</p>
+	  <p>Nous allons ajouter toutes les ressources séquentiellement. Quand toutes les ressources seront chargées, cliquez sur "Ajouter tout".</p>
 	</div>
   </div>
 </div>
