--- a/public/src/dialog/dialogs/tutorial-add-media-url-samples.html
+++ b/public/src/dialog/dialogs/tutorial-add-media-url-samples.html
@@ -10,11 +10,11 @@ obtain one at https://raw.github.com/mozilla/butter/master/LICENSE -->
 	  <p>Les ressources suivantes correspondent à la version vidéo du cours sur HTML5 du Site du Zéro. Copiez cette liste et collez là dans le champ précédent, puis cliquez sur le bouton "Importer" qui va apparaître.</p>
 	  <textarea style="margin: 0px;
 width: 471px;
-height: 142px;">http://localhost:8888/intro-site-du-zero.mp4
-http://localhost:8888/html5-intro.mp4
+height: 142px;">http://sirac.inrialpes.fr/intro-site-du-zero.mp4
+http://sirac.inrialpes.fr/html5-intro.mp4
 http://www.youtube.com/watch?v=IA0pu90mTlA
 http://www.youtube.com/watch?v=qyu1QjFAr2c
-http://localhost:8888/html5-partie1-chapitre1-langages-interlude.mp4
+http://sirac.inrialpes.fr/html5-partie1-chapitre1-langages-interlude.mp4
 http://www.youtube.com/watch?v=5G8RyOjYX2I
 http://www.youtube.com/watch?v=RJvLlUrDupo</textarea>
 	</div>
