--- a/public/src/dialog/dialogs/tutorial-edition-save-call.html
+++ b/public/src/dialog/dialogs/tutorial-edition-save-call.html
@@ -6,9 +6,9 @@ obtain one at https://raw.github.com/mozilla/butter/master/LICENSE -->
 <div class="butter-tutorial-dialog butter-feedback-form butter-dialog">
   <div class="butter-dialog-offset">
 	<div class="butter-dialog-body tutorial-panel">
-	  <h2><strong>Les ressources ont été ajoutées dans la ligne de temps</strong></h2>
-	  <p>Voyons ce que l'on peut faire à partir de là.</p>
-      <a class="butter-btn btn-light next-step-btn" target="_blank">Suite →</a>
+	  <h2><strong>Sauvegarder l'édition</strong></h2>
+	  <p>Parfait ! Nous avons désormais terminé l'édition d'un premièr cours, qu'il faut sauvegarder. Pour cela, nous allons donner un nom à l'édition.</p>
+	  <p>Dans la barre de contrôle, cliquez sur "Mon nouveau projet" et saisissez "Apprenez à créer votre site web avec HTML5 et CSS3". Validez en cliquant sur "Sauver".</p>
 	</div>
   </div>
 </div>
