--- a/public/src/dialog/dialogs/tutorial-edition-save-done.html
+++ b/public/src/dialog/dialogs/tutorial-edition-save-done.html
@@ -6,9 +6,10 @@ obtain one at https://raw.github.com/mozilla/butter/master/LICENSE -->
 <div class="butter-tutorial-dialog butter-feedback-form butter-dialog">
   <div class="butter-dialog-offset">
 	<div class="butter-dialog-body tutorial-panel">
-	  <h2><strong>Les ressources ont été ajoutées dans la ligne de temps</strong></h2>
-	  <p>Voyons ce que l'on peut faire à partir de là.</p>
-      <a class="butter-btn btn-light next-step-btn" target="_blank">Suite →</a>
+	  <h2><strong>L'édition a été sauvegardée</strong></h2>
+	  <p>Vous pouvez avoir un aperçu en cliquant sur le bouton "→"</p>
+	  <p>Ce tutorial est maintenant terminé. L'éditeur hypermédia offre beaucoup d'autres possibilités d'édition, et d'autres sont encore à venir !</p>
+      <a class="butter-btn btn-light next-step-btn" target="_blank">Continuer à utiliser l'éditeur →</a>
 	</div>
   </div>
 </div>
